name:                st2
version:             0.1.0.0
synopsis:            shared heap regions between local mutable state threads
-- description:
homepage:            https://github.com/chessai/st2.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.ST2
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 4.13, gdp, ghc-prim, primitive
  hs-source-dirs:      src
  default-language:    Haskell2010
